# Nae-backend

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
config/: default.toml
db/: Cargo.toml
db/src/: lib.rs
derives/: Cargo.toml
derives/src/: lib.rs
errors/: Cargo.toml
errors/src/: lib.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/utils/: json.rs  mod.rs  time.rs
src/: animo.rs  api.rs  auth.rs  error.rs  lib.rs  main.rs  memory.rs  rocksdb.rs  settings.rs  shared.rs  test.rs  websocket.rs
src/accounts/: mod.rs
src/animo/: accounts.rs  db.rs  error.rs  memory.rs  mod.rs  ops_manager.rs  shared.rs  time.rs  warehouse.rs
src/commutator/: mod.rs
src/docs/: docs_files.rs  mod.rs  refs_files.rs
src/file/: mod.rs
src/hik/: auth.rs  camera.rs  error.rs  mod.rs  res.json
src/hik/actions/: list_devices.rs  mod.rs  task.rs
src/hik/data/: alert_item.rs  device_info.rs  event_type.rs  mod.rs  triggers_parser.rs
src/hik/services/: actions.rs  cameras.rs  events.rs  mod.rs
src/hr/: mod.rs  storage.rs
src/hr/services/: attendance_report.rs  companies.rs  departments.rs  mod.rs  shifts.rs
src/inventory/: service.rs
src/links/: links_index.rs  mod.rs  test_save_links.rs
src/memories/: memories_in_files.rs  mod.rs  stock.rs
src/protos/: memory.proto
src/services/: authentication.rs  mod.rs  people.rs  users.rs
src/services/persistent/: in_files.rs  in_kv.rs  mod.rs
src/storage/: cameras.rs  docs.rs  memories.rs  mod.rs  old_references.rs  organizations.rs  references.rs
src/store/: balance.rs  check_batch_store_date.rs  check_date_store_batch.rs  date_type_store_batch_id.rs  date_type_store_goods_id.rs  db.rs  error.rs  mod.rs  store_date_type_batch_id.rs  store_date_type_goods_id.rs  test.rs  wh_storage.rs
src/store/tests/: mod.rs  test.rs
src/store/tests/store_test_app_incomplete_data/: mod.rs
src/store/tests/store_test_key_to_data/: mod.rs
src/text_search/: engine_tantivy.rs  mod.rs  process_text_search.rs  processing.rs  search_engines.rs  tantivy_search.rs
src/use_cases/: csv.rs  mod.rs  uc_001.rs  uc_002.rs  uc_003.rs  uc_004.rs  uc_005.rs  uc_006.rs  uc_007.rs  uc_008.rs  uc_009.rs  uc_010.rs  uc_convert.rs  uc_create.rs  uc_delete.rs  uc_replace.rs  uc_save.rs
src/utils/: json.rs  mod.rs  substring.rs  time.rs
src/warehouse/: balance.rs  balance_operation.rs  balance_operations.rs  base_topology.rs  goods_topology.rs  mod.rs  primitive_types.rs  primitives.rs  report_topology.rs  stock_topology.rs  store_aggregation_topology.rs  store_topology.rs  turnover.rs
src/ws/: engine_io.rs  messages.rs  mod.rs  socket_io.rs  start.rs
store/: Cargo.toml
store/src/: aggregations.rs  agregations.rs  balance.rs  batch.rs  check_batch_store_date.rs  check_date_store_batch.rs  checkpoint_topology.rs  date_type_store_batch_id.rs  db.rs  elements.rs  error.rs  events.rs  lib.rs  operations.rs  ordered_topology.rs  process_records.rs  qty.rs  store_date_type_batch_id.rs  test.rs  wh_storage.rs
store/src/checkpoints/: check_batch_store_date.rs  check_date_store_batch.rs  mod.rs
store/src/topologies/: date_type_store_batch_id.rs  mod.rs  store_batch_date_type_id.rs  store_date_type_batch_id.rs  store_goods_date_type_id_batch.rs
store/tests/: balance_check.rs  checkpoints_update.rs  get_aggregations_without_checkpoints.rs  get_wh_ops.rs  issue_cost_none.rs  issue_op_none.rs  issue_partly.rs  issue_remainder.rs  key_to_data.rs  neg_balance_date_type_store_goods_id.rs  op_iter.rs  parties_date_type_store_goods_id.rs  receive_change_op.rs  receive_cost_none.rs  receive_ops.rs  report.rs  zero_balance_date_type_store_goods_id.rs
tests/: adding_ops_before.rs  app_change_move.rs  app_checkpoints.rs  app_from_csv.rs  app_incomplete_data.rs  app_move.rs  app_move_checkpoints.rs  app_receive_issue_change.rs  app_receive_many_stores.rs  check_backdated_set_cost.rs  check_change_receive.rs  check_change_transfer.rs  check_csv_incomplete_data.rs  check_delete_op.rs  check_different_balances_recalculate.rs  check_document_update_with_receive.rs  check_document_update_with_transfer.rs  check_edit_document.rs  check_edit_op_sum.rs  check_emulate_write_from_csv.rs  check_receive_in_two_years.rs  check_receive_transfer_transfer.rs  check_receive_two_stores.rs  check_receive_two_years_two_goods_transfer.rs  check_recursion.rs  check_transfer_receive_transfer.rs  check_transfer_transfer_receive.rs  check_two_backdated_receive.rs  check_two_transfers.rs  check_zero_batch_deleted.rs  csv_to_json.rs  document_update.rs  document_update_with_receive.rs  document_update_with_transfer.rs  recalculating_many_ops.rs  test.rs
tests/test_init/: mod.rs
utils/: Cargo.toml
utils/src/: json.rs  time.rs
values/: Cargo.toml
values/src/: c.rs  constants.rs  lib.rs
