[package]
name = "nae-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./store"]

[profile.release]
strip = true
#opt-level = "z" #optimize for size
#lto = true
#panic = "abort"

[dependencies]
service = { path = "./service" }
store = { path = "./store" }
derives = { path = "./derives" }
lazy_static = "1.4.0"

walkdir = "2.3.2"
symlink = "0.1.0"
pathdiff = "0.2.1"

linked_hash_set = "0.1.4"
#bigdecimal = "0.3.0"
rust_decimal = { version = "1.26", features = ["rkyv", "serde_json"] }
#chrono = { version = "0.4.19", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde", "rkyv"] }
#chrono = { git = "https://github.com/chronotope/chrono", features = ["serde", "rkyv"] }
#now = "0.1.2"
uuid = { version = "1.2.1", features = ["v4", "serde"] }

config = "0.13.1"
structopt = "0.3.26"

#socketio
bytestring = "1.1.0"

actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1.0"
actix-cors = "0.6.3"
actix-web-httpauth = "0.8.0"
actix-files = "0.6.1"
actix-multipart = "0.6"
actix-interop = "0.4.0"
thiserror = "1.0.37"
actix-ratelimit = "0.3.1" # TODO use it

futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
sanitize-filename = "0.4"

qstring = "0.7.2"
jsonwebtoken = { version = "8", default-features = false }
pbkdf2 = "0.11.0"

byteorder = "1.4.3"
zerocopy = "0.6.1"

rand = "0.8.5"

rkyv = { version = "0.7.38", features = ["validation"] }
bytecheck = "0.7.0"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11"
serde_json = "1.0"
json = "0.12.4" # replacement for serde_json ?
#bson = "0.14.1"
#simd-json = "0.5.0"
#bincode = "1.3.3"
base64 = "0.21"

#ckb-rocksdb have transaction
rocksdb = { version = "0.20", default-features = false, features = ["lz4", "multi-threaded-cf"] }

tantivy = { version = "0.19", features = ["mmap"] }
simsearch = "0.2.4"

#Firebird Client
#rsfbclient = "0.21.0"

blake2 = "0.10.4"

#validator = { version = "0.15", features = ["derive"] }

#hik
#reqwest = { path = "./reqwest", features = ["stream", "multipart", "gzip", "brotli", "deflate"] }
reqwest = {version = "0.11", features = ["stream", "multipart", "gzip", "brotli", "deflate"]} # , "blocking"

digest_auth = "0.3"
async-trait = "0.1"
futures = "0.3"
quick-error = "2"
minidom = "0.15"
multipart-stream = "0.1"
mime = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-cron-scheduler = "0.9"
ureq = "2.5.0"

crossbeam = "0.8"
#crossbeam-channel = "0.5"

log = "0.4.17"
env_logger = "0.10"

dbase = { version = "0.3", features = ["yore"] }
yore = "1.0.1"
csv = "1.1.6"

profiling = "1.0.6"
levenshtein = "1.0.5"

#rust_decimal_macros = "1.26"

[dev-dependencies]
tempfile = "3.3.0"
criterion = "0.4"
