[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
utils = { path = "../utils" }
actix-web = "4"
chrono = { version = "0.4.22", features = ["serde", "rkyv"] }
serde_json = "1.0"
json = "0.12.4" # replacement for serde_json ?
uuid = { version = "1.2.1", features = ["v4", "serde"] }
