[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
service = { path = "../service" }

log = "0.4.17"
env_logger = "0.10"

rust_decimal = { version = "1.26", features = ["rkyv", "serde_json"] }
#chrono = { version = "0.4.19", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde", "rkyv"] }
#chrono = { git = "https://github.com/chronotope/chrono", features = ["serde", "rkyv"] }
#now = "0.1.2"
uuid = { version = "1.2.1", features = ["v4", "serde"] }

actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1.0"
actix-cors = "0.6.3"
actix-web-httpauth = "0.8.0"
actix-files = "0.6.1"
actix-multipart = "0.6"
actix-interop = "0.4.0"
thiserror = "1.0.37"
actix-ratelimit = "0.3.1" # TODO use it

#bincode = "1.3.3"
ciborium = "0.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11"
serde_json = "1.0"
json = "0.12.4" # replacement for serde_json ?
#bson = "0.14.1"
#simd-json = "0.5.0"

base64 = "0.21"
csv = "1.1.6"

#ckb-rocksdb have transaction
rocksdb = { version = "0.20", default-features = false, features = ["lz4", "multi-threaded-cf"] }

#hik
#reqwest = { path = "./reqwest", features = ["stream", "multipart", "gzip", "brotli", "deflate"] }
reqwest = {version = "0.11", features = ["stream", "multipart", "gzip", "brotli", "deflate"]} # , "blocking"

[dev-dependencies]
tempfile = "3.3.0"