[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
rust_decimal = { version = "1.26", features = ["rkyv", "serde_json"] }
chrono = { version = "0.4.22", features = ["serde", "rkyv"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
json = "0.12.4" # replacement for serde_json ?